Fix fullscreen key input, fixed full screen mouse alignment

--- a/app/static/css/navbar.css
+++ b/app/static/css/navbar.css
@@ -90,7 +90,7 @@
 }
 
 .navbar .dropdown {
-  z-index: 9999;
+  z-index: 1;
 }
 
 .navbar .dropdown a {
